--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    {% block head %}{% endblock %}
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <title>Разговоры и важном</title>
+    <link rel="stylesheet" href="style.css">
+      <style>
+      {% block style %}{% endblock %}
+      </style>
 </head>
 <body>
 {% block body %}{% endblock %}
