--- a/templates/earthexample.html
+++ b/templates/earthexample.html
@@ -1,10 +1,95 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+{%block style %}
+    <style>
+.site-header{
+  text-align: right;
+  color: #ffffff;
+}
 
-</body>
-</html>
+.registration{
+    color: blue;
+}
+
+.come{
+    color: red;
+}
+
+.features {
+  width: 510px;
+  margin: 0 auto 30px;
+  text-align: center;
+  font-size: 18px;
+}
+
+.advantages-list {
+  padding: 0;
+  list-style: 20;
+  text-align: left;
+}
+
+.advantages-item {
+  margin-bottom: 15px;
+  padding-left: 20px;
+  border-left: 20px solid #e2e2e2;
+  color: #999999;
+}
+
+.standard {
+  border-color: #091F92;
+}
+
+ul.hr {
+    margin: 0;
+    padding: 4px;
+}
+ul.hr li {
+    display: inline;
+    margin-right: 5px;
+}
+</style>
+{% endblock %}
+{% block content %}
+      <h1>День земли</h1>
+    <section class="advantages">
+    <p>
+        <img src="img/big_cover_03_earthday.png" width="310" height="210">
+        <img src="img/big_cover_10_spaceday2.png" width="310" height="210">
+        <img src="img/big_cover_23_media.png" width="310" height="210">
+    </p>
+    </section>
+
+    <section class="material">
+    <p>День Земли (англ. Earth Day) — название, используемое по отношению к различным мероприятиям, проводимым весной и призванным
+        побудить людей быть внимательнее к хрупкой и уязвимой окружающей среде на планете Земля. Мероприятие впервые было
+        организовано сетью «День Земли». Существуют два основных периода проведения Дней Земли: в марте (ближе к
+        весеннему равноденствию) и 22 апреля. Кроме того, в настоящее время многие рядовые участники и инициативные группы
+        планируют и проводят ряд мероприятий ко Дню Земли ближе к моменту летнего солнцестояния, чтобы максимально использовать
+        тёплую погоду и свободное время людей.</p>
+
+<p>Изначально День Земли празднуется во многих странах в день весеннего равноденствия, чтобы отметить момент, когда начинается
+    весна (в Северном полушарии) или осень (в Южном).</p>
+
+<p>Флаг Земли не является официальным символом чего-либо (поскольку официально не существует общепланетного правительства
+    или государства). Он представляет собой фотографию планеты из космоса (в настоящее время используется снимок, сделанный
+    астронавтами «Аполлона-17» по дороге к Луне) на тёмно-синем фоне. Традиционно Флаг связан с днём Земли и многими другими
+    природоохранными, миротворческими и гражданскими международными мероприятиями. Символом дня является зелёная греческая
+    буква Θ (Тета) на белом фоне. Интересно то, что юбилейный символ эсперанто практически такой же.</p>
+
+<p>В День Земли в разных странах по традиции звучит Колокол Мира, призывая людей Земли ощутить всепланетную общественность
+    и приложить усилия к защите мира на планете и сохранению красоты нашего общего дома. Колокол Мира — символ спокойствия,
+    мирной жизни и дружбы, вечного братства и солидарности народов. И в то же время — это призыв к действию во имя сохранения
+    мира и жизни на Земле, сохранения Человека и Культуры.</p>
+
+<p>Первый Колокол Мира был установлен в штаб-квартире ООН в Нью-Йорке в 1954 г. Он отлит из монет, пожертвованных детьми
+    разных континентов, и является символом глобальной солидарности людей Земли. В него также вплавлены ордена и медали,
+    другие почётные знаки людей многих стран. Надпись на Колоколе гласит: «Да здравствует всеобщий мир во всём мире».
+    В 1996 году такой же колокол был установлен в ООН в Вене. Колокол Мира установлен во многих городах Японии, в крупных
+    городах Германии (1989), Польши, Турции (1989), Мексики (1990), Австралии (1992), Монголии (1993), Филиппин (1994),
+    Канады (1996), Бразилии (1997), Аргентины (1998), Эквадора (1999), Узбекистана (2003) и других стран.</p>
+<hr align="center" width="100%" size="3" color="#dddddd" />
+    </section>
+    <p>
+Комментарии:
+    </p>
+<p><a class="btn btn-secondary" href="index">Назад</a></p>
+{% endblock %}
