--- a/templates/index.html
+++ b/templates/index.html
@@ -58,9 +58,9 @@ ul.hr li {
         <ul class="advantages-list">
             <li><a class="btn color" href="/cosmoexample">День День космонавтики</a></li>
             <img src="cosmo.png" alt="">
-            <li><a class="btn color" href="/cosmoexample">День земли</a></li>
-            <li><a class="btn color" href="/cosmoexample">Медиаграмотность и цифровая гигиена</a></li>
-            <li><a class="btn color" href="/cosmoexample">День музыки</a></li>
+            <li><a class="btn color" href="/earthexample">День земли</a></li>
+            <li><a class="btn color" href="/oneexample">День народного единства</a></li>
+            <li><a class="btn color" href="/yearexample">Новый год</a></li>
         </ul>
     </p>
 </section>
