--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@ ul.hr li {
 <section class="advantages">
     <p>
         <ul class="advantages-list">
-            <li><a class="btn color" href="/cosmoexample">День День космонавтики</a></li>
+            <li><a class="btn color" href="/cosmoexample">День космонавтики</a></li>
             <img src="cosmo.png" alt="">
             <li><a class="btn color" href="/earthexample">День земли</a></li>
             <li><a class="btn color" href="/oneexample">День народного единства</a></li>
