--- a/templates/oneexample.html
+++ b/templates/oneexample.html
@@ -83,6 +83,19 @@ ul.hr li {
     </section>
     <p>
 Комментарии:
+{% for item in news%}
+<div class="col-md6 border rounded">
+    <div>
+        {{item.content}}
+    </div>
+    <div>
+        Автор - {{item.user.name}}, Дата написания - {{item.created_date}}
+    </div>
+</div>
+{% endfor %}
     </p>
-<p><a class="btn btn-secondary" href="/index">Назад</a></p>
+<p><a class="btn btn-secondary" href="/">Назад</a></p>
+{% if current_user.is_authenticated %}
+    <a href="oneexample/comment" class="btn btn-secondary">Добавить комментарий</a>
+{% endif %}
 {% endblock %}
