--- a/templates/earthexample.html
+++ b/templates/earthexample.html
@@ -59,7 +59,7 @@ ul.hr li {
     </section>
 
     <section class="material">
-    <p>День Земли (англ. Earth Day) — название, используемое по отношению к различным мероприятиям, проводимым весной и призванным
+    <p>День Земли — название, используемое по отношению к различным мероприятиям, проводимым весной и призванным
         побудить людей быть внимательнее к хрупкой и уязвимой окружающей среде на планете Земля. Мероприятие впервые было
         организовано сетью «День Земли». Существуют два основных периода проведения Дней Земли: в марте (ближе к
         весеннему равноденствию) и 22 апреля. Кроме того, в настоящее время многие рядовые участники и инициативные группы
@@ -73,7 +73,7 @@ ul.hr li {
     или государства). Он представляет собой фотографию планеты из космоса (в настоящее время используется снимок, сделанный
     астронавтами «Аполлона-17» по дороге к Луне) на тёмно-синем фоне. Традиционно Флаг связан с днём Земли и многими другими
     природоохранными, миротворческими и гражданскими международными мероприятиями. Символом дня является зелёная греческая
-    буква Θ (Тета) на белом фоне. Интересно то, что юбилейный символ эсперанто практически такой же.</p>
+    буква Θ (Тета) на белом фоне.</p>
 
 <p>В День Земли в разных странах по традиции звучит Колокол Мира, призывая людей Земли ощутить всепланетную общественность
     и приложить усилия к защите мира на планете и сохранению красоты нашего общего дома. Колокол Мира — символ спокойствия,
