--- a/templates/index.html
+++ b/templates/index.html
@@ -55,13 +55,11 @@ ul.hr li {
 <div>
 <section class="advantages">
     <p>
-        <ul class="advantages-list">
-            <li><a class="btn color" href="/cosmoexample">День космонавтики</a></li>
-            <img src="cosmo.png" alt="">
-            <li><a class="btn color" href="/earthexample">День земли</a></li>
-            <li><a class="btn color" href="/oneexample">День народного единства</a></li>
-            <li><a class="btn color" href="/yearexample">Новый год</a></li>
-        </ul>
+        <a class="btn color" href="/cosmoexample">День космонавтики</a>
+        <img src="cosmo.png" alt="">
+        <a class="btn color" href="/earthexample">День земли</a>
+        <a class="btn color" href="/oneexample">День народного единства</a>
+        <a class="btn color" href="/yearexample">Новый год</a>
     </p>
 </section>
 </div>
