--- a/templates/oneexample.html
+++ b/templates/oneexample.html
@@ -62,6 +62,18 @@ ul.hr li {
     <p>День наро́дного еди́нства — российский государственный праздник, отмечаемый 4 ноября, начиная с 2005 года. В этот
         день установлен день воинской славы России.</p>
 
+<p>22 октября (1 ноября) 1612 года народное ополчение под предводительством Кузьмы Минина и Дмитрия Пожарского штурмом
+    взяло Китай-город, гарнизон Речи Посполитой отступил в Кремль. Князь Пожарский вступил в Китай-город с Казанской
+    иконой Божией Матери. 26 октября (5 ноября) командование польского гарнизона Кремля подписало капитуляцию, выпустив
+    тогда же из Кремля московских бояр (законное правительство России) и других знатных лиц, среди которых находился и
+    будущий царь Михаил Фёдорович. На следующий день 27 октября (6 ноября) гарнизон сдался. Но 25 октября (4 ноября) в
+    Москве не произошло никаких значимых событий.</p>
+
+<p>В 1649 году царь Алексей Михайлович распорядился отмечать день Казанской иконы Божией Матери не только летом, но и 22
+    октября (по юлианскому календарю), когда у него родился первенец Дмитрий Алексеевич. «Празднование Казанской иконе
+    Божией Матери (в память избавления Москвы и России от поляков в 1612 году)» сохраняется в православном и народном
+    календаре доныне.</p>
+
 <p>В XX и XXI веках дню 22 октября по юлианскому календарю соответствует в григорианском календаре 4 ноября. Именно эта
     дата — 22 октября по юлианскому календарю, или 4 ноября по григорианскому календарю — выбрана в качестве дня государственного
     праздника. Однако к историческим событиям, произошедшим в этот день в 1612 году, он не имеет прямого отношения.</p>
@@ -93,7 +105,6 @@ ul.hr li {
     </div>
 </div>
 {% endfor %}
-    </p>
 <p><a class="btn btn-secondary" href="/">Назад</a></p>
 {% if current_user.is_authenticated %}
     <a href="oneexample/comment" class="btn btn-secondary">Добавить комментарий</a>
