--- a/templates/cosmoexample.html
+++ b/templates/cosmoexample.html
@@ -52,25 +52,32 @@ ul.hr li {
       <h1>День космонавтики</h1>
     <section class="advantages">
     <p>
-        <img src="img\big_cover_03_earthday.png" width="310" height="210">
-        <img src="img/big_cover_10_spaceday2.png" width="310" height="210">
-        <img src="img/big_cover_23_media.png" width="310" height="210">
-        <img src="img/big_cover_17_october.png" width="310" height="210">
+        <img src="img/cosmo/cosmo.png" width="310" height="210">
+        <img src="img/cosmo/east2.png" width="310" height="210">
+        <img src="img/cosmo/human.png" width="310" height="210">
     </p>
     </section>
 
     <section class="material">
-    <p>
-День космонавтики — отмечаемая сначала в СССР, а после в России и других странах постсоветского пространства 12 апреля дата, установленная в ознаменование первого полёта человека в космос.</p>
+    <p>День космонавтики — отмечаемая сначала в СССР, а после в России и других странах постсоветского пространства 12
+        апреля дата, установленная в ознаменование первого полёта человека в космос.</p>
 
-<p>12 апреля 1961 года советский космонавт Юрий Гагарин на космическом корабле «Восток-1» стартовал с космодрома «Байконур» и впервые в мире совершил орбитальный облёт планеты Земля. Полёт в околоземном космическом пространстве продлился 108 минут[1]. На месте его приземления в Саратовской области создан Парк покорителей космоса имени Юрия Гагарина.</p>
+<p>12 апреля 1961 года советский космонавт Юрий Гагарин на космическом корабле «Восток-1» стартовал с космодрома «Байконур»
+    и впервые в мире совершил орбитальный облёт планеты Земля. Полёт в околоземном космическом пространстве продлился 108
+    минут. На месте его приземления в Саратовской области создан Парк покорителей космоса имени Юрия Гагарина.</p>
 
-<p>В Советском Союзе праздник установлен указом Президиума Верховного Совета СССР от 9 апреля 1962 года. Отмечается под названием День космонавтики. Этот праздник установлен по предложению второго лётчика-космонавта СССР Германа Титова, который обратился в ЦК КПСС с соответствующим предложением 26 марта 1962 года[2][3].</p>
+<p>В Советском Союзе праздник установлен указом Президиума Верховного Совета СССР от 9 апреля 1962 года. Отмечается под
+    названием День космонавтики. Этот праздник установлен по предложению второго лётчика-космонавта СССР Германа Титова,
+    который обратился в ЦК КПСС с соответствующим предложением 26 марта 1962 года.</p>
 
-<p>В этот же день отмечается Всемирный день авиации и космонавтики согласно протоколу (п. 17) 61-й Генеральной конференции Международной авиационной федерации, состоявшейся в ноябре 1968 года, и решению Совета Международной авиационной федерации, принятому 30 апреля 1969 года по представлению Федерации авиационного спорта СССР[4].</p>
+<p>В этот же день отмечается Всемирный день авиации и космонавтики согласно протоколу (п. 17) 61-й Генеральной конференции
+    Международной авиационной федерации, состоявшейся в ноябре 1968 года, и решению Совета Международной авиационной федерации,
+    принятому 30 апреля 1969 года по представлению Федерации авиационного спорта СССР.</p>
 
-<p>В Российской Федерации День космонавтики отмечается в соответствии со статьёй 1.1 Федерального закона от 13 марта 1995 года № 32-ФЗ «О днях воинской славы и памятных датах России»[5]. Как правило, главные мероприятия в рамках празднования праздника проходят в Москве: в Московском планетарии проводятся экскурсии, а в Музее космонавтики готовят специальные проекты, лекции и встречи.</p>
-    </p>
+<p>В Российской Федерации День космонавтики отмечается в соответствии со статьёй 1.1 Федерального закона от 13 марта 1995
+    года № 32-ФЗ «О днях воинской славы и памятных датах России». Как правило, главные мероприятия в рамках празднования
+    праздника проходят в Москве: в Московском планетарии проводятся экскурсии, а в Музее космонавтики готовят специальные
+    проекты, лекции и встречи.</p>
 <hr align="center" width="100%" size="3" color="#dddddd" />
     </section>
     <p>
