--- a/templates/index.html
+++ b/templates/index.html
@@ -64,6 +64,7 @@ text-align: centre;
         <a class="btn color" href="/oneexample">День народного единства</a>
         <a class="btn color" href="/yearexample">Новый год</a>
     </p>
+    <img src="static/img.png" alt="">
 </section>
 </div>
 {% endblock %}
